# fastapi-infra-kit

./: .gitignore  Caddyfile  Dockerfile  README.md  build.docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_now.sh  run_now_local_build.sh  sample.docker-compose.env
app/: main.py  utils.py
app/alembic/: env.py  sample.alembic.ini
app/alembic/versions/: d4dbf438dd33_initial_migration.py  da26af3716cb_initial_structure.py
app/api/v1/: router.py
app/api/v1/http/: bucket.py  event.py
app/core/: config.py  database.py  exception_handlers.py  logger.py  logging.py  redis.py
app/core/middleware/: request_logger.py
app/envs/: sample.env
app/exceptions/: api_exceptions.py  custom_exceptions.py  sqlalchemy_exception_handler.py
app/models/: bucket.py  core.py  event.py
app/schemas/: bucket.py  core.py  event.py  mixin.py
app/services/: bucket_service.py  deps.py  error_handler.py  event_service.py  redis_service.py
app/tests/: conftest.py
app/tests/integrations/: test_bucket_integration.py  test_event_integration.py
app/tests/units/: test_bucket_service_unit.py  test_event_service_unit.py
scripts/: lint.sh  migrate.sh  test.sh
visualization/grafana/provisioning/dashboards/: logs-dashboard.json  metrics-dashboard.json
visualization/grafana/provisioning/datasources/: loki.yml  prometheus.yml
visualization/loki/: loki-config.yaml
visualization/prometheus/: prometheus.yml
visualization/promtail/: promtail-config.yaml
